antlr_out/MiniPythonParser.py
# Generated from MiniPython.g4 by ANTLR 4.7
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class MiniPythonParser ( Parser ):

    grammarFileName = "MiniPython.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'**'", "<INVALID>", "'def'", "'return'", 
                     "'from'", "'import'", "'as'", "'if'", "'elif'", "'else'", 
                     "'while'", "'for'", "'in'", "'or'", "'and'", "'not'", 
                     "'is'", "'None'", "'True'", "'False'", "'class'", "'del'", 
                     "'pass'", "'continue'", "'break'", "'('", "')'", "'['", 
                     "']'", "'{'", "'}'", "'.'", "'*'", "','", "':'", "'='", 
                     "'@'", "'<'", "'>'", "'=='", "'>='", "'<='", "'!='", 
                     "'+'", "'-'", "'/'", "'%'", "'+='", "'-='", "'*='", 
                     "'/='", "'%='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "NEWLINE", "DEF", "RETURN", 
                      "FROM", "IMPORT", "AS", "IF", "ELIF", "ELSE", "WHILE", 
                      "FOR", "IN", "OR", "AND", "NOT", "IS", "NONE", "TRUE", 
                      "FALSE", "CLASS", "DEL", "PASS", "CONTINUE", "BREAK", 
                      "OPEN_PAREN", "CLOSE_PAREN", "OPEN_BRACK", "CLOSE_BRACK", 
                      "OPEN_BRACE", "CLOSE_BRACE", "DOT", "STAR", "COMMA", 
                      "COLON", "ASSIGN", "AT", "LESS_THAN", "GREATER_THAN", 
                      "EQUALS", "GT_EQ", "LT_EQ", "NOT_EQ", "ADD", "MINUS", 
                      "DIV", "MOD", "ADD_ASSIGN", "SUB_ASSIGN", "MULT_ASSIGN", 
                      "DIV_ASSIGN", "MOD_ASSIGN", "NAME", "STRING", "INTEGER", 
                      "FLOAT", "SKIP_", "UNKNOWN_CHAR", "INDENT", "DEDENT" ]

    RULE_single_input = 0
    RULE_file_input = 1
    RULE_decorator = 2
    RULE_decorators = 3
    RULE_decorated = 4
    RULE_func_def = 5
    RULE_var_arg_list = 6
    RULE_vfpdef = 7
    RULE_stmt = 8
    RULE_simple_stmt = 9
    RULE_expr_stmt = 10
    RULE_testlist_star_expr = 11
    RULE_aug_assign = 12
    RULE_flow_stmt = 13
    RULE_compound_stmt = 14
    RULE_if_stmt = 15
    RULE_while_stmt = 16
    RULE_for_stmt = 17
    RULE_suite = 18
    RULE_test = 19
    RULE_or_test = 20
    RULE_and_test = 21
    RULE_not_test = 22
    RULE_comparison = 23
    RULE_comp_op = 24
    RULE_expr = 25
    RULE_term = 26
    RULE_factor = 27
    RULE_trailer = 28
    RULE_subscript_list = 29
    RULE_atom = 30
    RULE_list_compr = 31
    RULE_dict_compr = 32
    RULE_expr_list = 33
    RULE_test_list = 34
    RULE_class_def = 35
    RULE_arg_list = 36
    RULE_argument = 37
    RULE_comp_iter = 38
    RULE_comp_for = 39
    RULE_comp_if = 40
    RULE_dotted_name = 41
    RULE_string = 42
    RULE_number = 43

    ruleNames =  [ "single_input", "file_input", "decorator", "decorators", 
                   "decorated", "func_def", "var_arg_list", "vfpdef", "stmt", 
                   "simple_stmt", "expr_stmt", "testlist_star_expr", "aug_assign", 
                   "flow_stmt", "compound_stmt", "if_stmt", "while_stmt", 
                   "for_stmt", "suite", "test", "or_test", "and_test", "not_test", 
                   "comparison", "comp_op", "expr", "term", "factor", "trailer", 
                   "subscript_list", "atom", "list_compr", "dict_compr", 
                   "expr_list", "test_list", "class_def", "arg_list", "argument", 
                   "comp_iter", "comp_for", "comp_if", "dotted_name", "string", 
                   "number" ]

    EOF = Token.EOF
    T__0=1
    NEWLINE=2
    DEF=3
    RETURN=4
    FROM=5
    IMPORT=6
    AS=7
    IF=8
    ELIF=9
    ELSE=10
    WHILE=11
    FOR=12
    IN=13
    OR=14
    AND=15
    NOT=16
    IS=17
    NONE=18
    TRUE=19
    FALSE=20
    CLASS=21
    DEL=22
    PASS=23
    CONTINUE=24
    BREAK=25
    OPEN_PAREN=26
    CLOSE_PAREN=27
    OPEN_BRACK=28
    CLOSE_BRACK=29
    OPEN_BRACE=30
    CLOSE_BRACE=31
    DOT=32
    STAR=33
    COMMA=34
    COLON=35
    ASSIGN=36
    AT=37
    LESS_THAN=38
    GREATER_THAN=39
    EQUALS=40
    GT_EQ=41
    LT_EQ=42
    NOT_EQ=43
    ADD=44
    MINUS=45
    DIV=46
    MOD=47
    ADD_ASSIGN=48
    SUB_ASSIGN=49
    MULT_ASSIGN=50
    DIV_ASSIGN=51
    MOD_ASSIGN=52
    NAME=53
    STRING=54
    INTEGER=55
    FLOAT=56
    SKIP_=57
    UNKNOWN_CHAR=58
    INDENT=59
    DEDENT=60

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class Single_inputContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEWLINE(self):
            return self.getToken(MiniPythonParser.NEWLINE, 0)

        def simple_stmt(self):
            return self.getTypedRuleContext(MiniPythonParser.Simple_stmtContext,0)


        def compound_stmt(self):
            return self.getTypedRuleContext(MiniPythonParser.Compound_stmtContext,0)


        def getRuleIndex(self):
            return MiniPythonParser.RULE_single_input

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSingle_input" ):
                listener.enterSingle_input(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSingle_input" ):
                listener.exitSingle_input(self)




    def single_input(self):

        localctx = MiniPythonParser.Single_inputContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_single_input)
        try:
            self.state = 93
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MiniPythonParser.NEWLINE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 88
                self.match(MiniPythonParser.NEWLINE)
                pass
            elif token in [MiniPythonParser.RETURN, MiniPythonParser.NOT, MiniPythonParser.NONE, MiniPythonParser.TRUE, MiniPythonParser.FALSE, MiniPythonParser.PASS, MiniPythonParser.CONTINUE, MiniPythonParser.BREAK, MiniPythonParser.OPEN_PAREN, MiniPythonParser.OPEN_BRACK, MiniPythonParser.OPEN_BRACE, MiniPythonParser.ADD, MiniPythonParser.MINUS, MiniPythonParser.NAME, MiniPythonParser.STRING, MiniPythonParser.INTEGER, MiniPythonParser.FLOAT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 89
                self.simple_stmt()
                pass
            elif token in [MiniPythonParser.DEF, MiniPythonParser.IF, MiniPythonParser.WHILE, MiniPythonParser.FOR, MiniPythonParser.CLASS, MiniPythonParser.AT]:
                self.enterOuterAlt(localctx, 3)
                self.state = 90
                self.compound_stmt()
                self.state = 91
                self.match(MiniPythonParser.NEWLINE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class File_inputContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MiniPythonParser.EOF, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(MiniPythonParser.NEWLINE)
            else:
                return self.getToken(MiniPythonParser.NEWLINE, i)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniPythonParser.StmtContext)
            else:
                return self.getTypedRuleContext(MiniPythonParser.StmtContext,i)


        def getRuleIndex(self):
            return MiniPythonParser.RULE_file_input

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFile_input" ):
                listener.enterFile_input(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFile_input" ):
                listener.exitFile_input(self)




    def file_input(self):

        localctx = MiniPythonParser.File_inputContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_file_input)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MiniPythonParser.NEWLINE) | (1 << MiniPythonParser.DEF) | (1 << MiniPythonParser.RETURN) | (1 << MiniPythonParser.IF) | (1 << MiniPythonParser.WHILE) | (1 << MiniPythonParser.FOR) | (1 << MiniPythonParser.NOT) | (1 << MiniPythonParser.NONE) | (1 << MiniPythonParser.TRUE) | (1 << MiniPythonParser.FALSE) | (1 << MiniPythonParser.CLASS) | (1 << MiniPythonParser.PASS) | (1 << MiniPythonParser.CONTINUE) | (1 << MiniPythonParser.BREAK) | (1 << MiniPythonParser.OPEN_PAREN) | (1 << MiniPythonParser.OPEN_BRACK) | (1 << MiniPythonParser.OPEN_BRACE) | (1 << MiniPythonParser.AT) | (1 << MiniPythonParser.ADD) | (1 << MiniPythonParser.MINUS) | (1 << MiniPythonParser.NAME) | (1 << MiniPythonParser.STRING) | (1 << MiniPythonParser.INTEGER) | (1 << MiniPythonParser.FLOAT))) != 0):
                self.state = 97
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [MiniPythonParser.NEWLINE]:
                    self.state = 95
                    self.match(MiniPythonParser.NEWLINE)
                    pass
                elif token in [MiniPythonParser.DEF, MiniPythonParser.RETURN, MiniPythonParser.IF, MiniPythonParser.WHILE, MiniPythonParser.FOR, MiniPythonParser.NOT, MiniPythonParser.NONE, MiniPythonParser.TRUE, MiniPythonParser.FALSE, MiniPythonParser.CLASS, MiniPythonParser.PASS, MiniPythonParser.CONTINUE, MiniPythonParser.BREAK, MiniPythonParser.OPEN_PAREN, MiniPythonParser.OPEN_BRACK, MiniPythonParser.OPEN_BRACE, MiniPythonParser.AT, MiniPythonParser.ADD, MiniPythonParser.MINUS, MiniPythonParser.NAME, MiniPythonParser.STRING, MiniPythonParser.INTEGER, MiniPythonParser.FLOAT]:
                    self.state = 96
                    self.stmt()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 101
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 102
            self.match(MiniPythonParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DecoratorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def dotted_name(self):
            return self.getTypedRuleContext(MiniPythonParser.Dotted_nameContext,0)


        def NEWLINE(self):
            return self.getToken(MiniPythonParser.NEWLINE, 0)

        def arg_list(self):
            return self.getTypedRuleContext(MiniPythonParser.Arg_listContext,0)


        def getRuleIndex(self):
            return MiniPythonParser.RULE_decorator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecorator" ):
                listener.enterDecorator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecorator" ):
                listener.exitDecorator(self)




    def decorator(self):

        localctx = MiniPythonParser.DecoratorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decorator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(MiniPythonParser.AT)
            self.state = 105
            self.dotted_name()
            self.state = 110
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MiniPythonParser.OPEN_PAREN:
                self.state = 106
                self.match(MiniPythonParser.OPEN_PAREN)
                self.state = 107
                self.arg_list()
                self.state = 108
                self.match(MiniPythonParser.CLOSE_PAREN)


            self.state = 112
            self.match(MiniPythonParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DecoratorsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decorator(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniPythonParser.DecoratorContext)
            else:
                return self.getTypedRuleContext(MiniPythonParser.DecoratorContext,i)


        def getRuleIndex(self):
            return MiniPythonParser.RULE_decorators

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecorators" ):
                listener.enterDecorators(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecorators" ):
                listener.exitDecorators(self)




    def decorators(self):

        localctx = MiniPythonParser.DecoratorsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_decorators)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 114
                self.decorator()
                self.state = 117 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==MiniPythonParser.AT):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DecoratedContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decorators(self):
            return self.getTypedRuleContext(MiniPythonParser.DecoratorsContext,0)


        def class_def(self):
            return self.getTypedRuleContext(MiniPythonParser.Class_defContext,0)


        def func_def(self):
            return self.getTypedRuleContext(MiniPythonParser.Func_defContext,0)


        def getRuleIndex(self):
            return MiniPythonParser.RULE_decorated

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecorated" ):
                listener.enterDecorated(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecorated" ):
                listener.exitDecorated(self)




    def decorated(self):

        localctx = MiniPythonParser.DecoratedContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_decorated)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.decorators()
            self.state = 122
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MiniPythonParser.CLASS]:
                self.state = 120
                self.class_def()
                pass
            elif token in [MiniPythonParser.DEF]:
                self.state = 121
                self.func_def()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Func_defContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEF(self):
            return self.getToken(MiniPythonParser.DEF, 0)

        def NAME(self):
            return self.getToken(MiniPythonParser.NAME, 0)

        def suite(self):
            return self.getTypedRuleContext(MiniPythonParser.SuiteContext,0)


        def var_arg_list(self):
            return self.getTypedRuleContext(MiniPythonParser.Var_arg_listContext,0)


        def getRuleIndex(self):
            return MiniPythonParser.RULE_func_def

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc_def" ):
                listener.enterFunc_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc_def" ):
                listener.exitFunc_def(self)




    def func_def(self):

        localctx = MiniPythonParser.Func_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_func_def)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(MiniPythonParser.DEF)
            self.state = 125
            self.match(MiniPythonParser.NAME)
            self.state = 126
            self.match(MiniPythonParser.OPEN_PAREN)
            self.state = 128
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MiniPythonParser.T__0) | (1 << MiniPythonParser.STAR) | (1 << MiniPythonParser.NAME))) != 0):
                self.state = 127
                self.var_arg_list()


            self.state = 130
            self.match(MiniPythonParser.CLOSE_PAREN)
            self.state = 131
            self.match(MiniPythonParser.COLON)
            self.state = 132
            self.suite()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Var_arg_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vfpdef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniPythonParser.VfpdefContext)
            else:
                return self.getTypedRuleContext(MiniPythonParser.VfpdefContext,i)


        def test(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniPythonParser.TestContext)
            else:
                return self.getTypedRuleContext(MiniPythonParser.TestContext,i)


        def getRuleIndex(self):
            return MiniPythonParser.RULE_var_arg_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_arg_list" ):
                listener.enterVar_arg_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_arg_list" ):
                listener.exitVar_arg_list(self)




    def var_arg_list(self):

        localctx = MiniPythonParser.Var_arg_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_var_arg_list)
        self._la = 0 # Token type
        try:
            self.state = 194
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 134
                self.vfpdef()
                self.state = 139
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 135
                        self.match(MiniPythonParser.COMMA)
                        self.state = 136
                        self.vfpdef() 
                    self.state = 141
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

                self.state = 149
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 142
                        self.match(MiniPythonParser.COMMA)
                        self.state = 143
                        self.vfpdef()
                        self.state = 144
                        self.match(MiniPythonParser.ASSIGN)
                        self.state = 145
                        self.test() 
                    self.state = 151
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

                self.state = 155
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
                if la_ == 1:
                    self.state = 152
                    self.match(MiniPythonParser.COMMA)
                    self.state = 153
                    self.match(MiniPythonParser.STAR)
                    self.state = 154
                    self.vfpdef()


                self.state = 160
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==MiniPythonParser.COMMA:
                    self.state = 157
                    self.match(MiniPythonParser.COMMA)
                    self.state = 158
                    self.match(MiniPythonParser.T__0)
                    self.state = 159
                    self.vfpdef()


                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 162
                self.vfpdef()
                self.state = 163
                self.match(MiniPythonParser.ASSIGN)
                self.state = 164
                self.test()
                self.state = 172
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 165
                        self.match(MiniPythonParser.COMMA)
                        self.state = 166
                        self.vfpdef()
                        self.state = 167
                        self.match(MiniPythonParser.ASSIGN)
                        self.state = 168
                        self.test() 
                    self.state = 174
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

                self.state = 178
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
                if la_ == 1:
                    self.state = 175
                    self.match(MiniPythonParser.COMMA)
                    self.state = 176
                    self.match(MiniPythonParser.STAR)
                    self.state = 177
                    self.vfpdef()


                self.state = 183
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==MiniPythonParser.COMMA:
                    self.state = 180
                    self.match(MiniPythonParser.COMMA)
                    self.state = 181
                    self.match(MiniPythonParser.T__0)
                    self.state = 182
                    self.vfpdef()


                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 185
                self.match(MiniPythonParser.STAR)
                self.state = 186
                self.vfpdef()
                self.state = 190
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==MiniPythonParser.COMMA:
                    self.state = 187
                    self.match(MiniPythonParser.COMMA)
                    self.state = 188
                    self.match(MiniPythonParser.T__0)
                    self.state = 189
                    self.vfpdef()


                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 192
                self.match(MiniPythonParser.T__0)
                self.state = 193
                self.vfpdef()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VfpdefContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(MiniPythonParser.NAME, 0)

        def getRuleIndex(self):
            return MiniPythonParser.RULE_vfpdef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVfpdef" ):
                listener.enterVfpdef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVfpdef" ):
                listener.exitVfpdef(self)




    def vfpdef(self):

        localctx = MiniPythonParser.VfpdefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_vfpdef)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 196
            self.match(MiniPythonParser.NAME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simple_stmt(self):
            return self.getTypedRuleContext(MiniPythonParser.Simple_stmtContext,0)

